2009-10-24 Ian Rutt
 * libglide/glide_temp.F90: First go at refactoring almost complete.
 * libglide/glide_vertcoord.F90: Moved to libglimmer/glimmer_vertcoord.F90
 * libglide/glide_utils.F90: amalgamated with libglimmer/glimmer_utils.F90
 * libglimmer/glimmer_pmpt.F90: new module containg pressure melting point
   functions. This is a mess at present.
 * libglide/glide_tempFullSoln.F90: New module to hold full temperature
   solution
 * libglide/glide_mask.F90: refactored glide_set_mask, and added new
   functions to calculate ice volume and area
 * libglide/glide_mask.F90: moved to libglimmer/glimmer_mask.F90, with
   contents renamed accordingly (i.e. glide -> glimmer in all cases).
 * Regtested against e2.a and e2.h

2009-10-23 Ian Rutt
 * libglide/glide_temp.F90: Pulled out basal hydrology into glide_bwat.F90
 * libglide/glide_temp.F90: Moved staggering and derivative calculations
   into subroutine. Removed geomderv from interface
 * Regtested against e2.a and e2.h

2009-10-22 Ian Rutt
 * libglide/glide_temp.F90: Created derived type for full temperature
   solution parameters. Began populating this. 
 * libglide/glide_temp.F90: began to separate out basal water
   model. Temporarily added utility module to resolve circular make
   dependencies. This will need refining.
 * Regtested against e2.a and e2.h
	
2009-10-21 Ian Rutt
 * libglide/glide_temp.F90: More refactoring progress. Preparation for
   variable time-step. Bug fixed: regtest passes (e2.a and e2.h)
 * libglide/glide_temp.F90: All tempwk arrays replaced by assumed-shape
   stack arrays in main call. Scalars from tempwk are either parameters
   (declared as such) or depend on the time-step, so must be in main call.
 * libglide/glide_temp.F90: Reduced derived types in interface.
 * Regtested against e2.a and e2.h
	
2009-10-20 Ian Rutt
 * libglide/glide_temp.F90: rationalised derived types in calcbmlt
   interface. Only uses tempwk and zCoord. Builds, but not regtested.

2009-10-15 Magnus Hagdorn